changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

server/apply.c: apply_treasure():  Bugfix: Set FLAG_NO_APPLY before
moving object to the top.  - Jan Echternach 6/13/2000

server/time.c: move_marker():  Bugfix: Call update_ob_speed() after
changing force->speed.  - Jan Echternach 6/13/2000

server/spell_util.c: move_swarm_spell():  Improved distribution of
fired objects.  Fixed starting position of fired objects to be able to
hit targets immediately in front the caster.  - Patch by Jeffrey Hantin,
applied by Jan Echternach 6/13/2000

server/disease.c, sproto.h, rune.c   Fixes from jhantin@derringer.net for diseases:
   Reversed strstr calls, force argument added to infect_object,
diseases in immune carrier last forever, needles use infect object,
cast_cause_disease won't fail.  --PeterM 6/9/2000

common/loader.l:  Fix handling of objects with no animation.  Fixes server
crash if object's archetype has an animation, but object doesn't.
- Jan Echternach 6/9/2000

common/loader.l: get_ob_diff():  Bugfix: Issue a "is_animated 0" line
if the object has an animation, but doesn't have FLAG_ANIMATE.
- Jan Echternach 6/9/2000

server/apply.c: manual_apply() and monster_apply_special():  Don't check
for FLAG_UNPAID if object is applied.  This should make the code more
robust if an unpaid item get's applied accidently.
- Jan Echternach 6/9/2000

server/apply.c: apply_special():  New optional flags AP_NO_MERGE and
AP_IGNORE_CURSE.  - Jan Echternach 6/9/2000

server/monster.c: find_mon_throw_ob(); server/skills.c: find_throw_ob():
Bugfix:  Use AP_NO_MERGE flag to prevent unapplied object be merged with